# ICEngine

./: CMakeLists.txt
ICEngineCore/: CMakeLists.txt
ICEngineCore/include/: engine.h
ICEngineEditor/: CMakeLists.txt
ICEngineEditor/src/: engine.cpp  main.cpp
